# fastapi-project-template

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  cliff.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: copilot-instructions.md
app/: main.py  schemas.py
app/api/: deps.py  main.py
app/api/routes/: assets.py  users.py
app/core/: config.py
scripts/: release.py
