[project]
name = "fastapi-project-template"
version = "0.1.0"
description = "A template for a FastAPI project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "bcrypt==4.0.1",
  "fastapi[standard]>=0.115.12",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.4",
  "pydantic-settings[toml]>=2.9.1",
  "pyjwt>=2.10.1",
  "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
